--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,12 @@
+packageExtensions:
+  typedoc@*:
+    dependencies:
+      "@gjsify/typedoc-theme": "*"
+      "@gjsify/typedoc-plugin-remote-search": "*"
+  "@types/yargs@*":
+    dependencies:
+      "yargs-parser": "*"
+
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
     spec: "@yarnpkg/plugin-typescript"
