--- a/package.json
+++ b/package.json
@@ -10,21 +10,30 @@
     "start:gjs": "yarn run build:gjs && yarn run serve:gjs",
     "start:node-gtk": "yarn run build:node-gtk && yarn run serve:node-gtk",
     "start:try": "yarn run build:try && yarn run serve:try",
+    "start:gjs:local": "yarn run build:gjs:local && yarn run serve:gjs",
+    "start:node-gtk:local": "yarn run build:node-gtk:local && yarn run serve:node-gtk",
+    "start:try:local": "yarn run build:try:local && yarn run serve:try",
     "update": "yarn run update:submodules",
     "update:submodules": "git submodule update --init --recursive && git submodule foreach git pull origin master",
     "build:types:node-gtk": "yarn run clear:types:node-gtk && NODE_OPTIONS=\"\" ts-for-gir generate '*' -e node --useNamespace --moduleType commonjs --ignoreConflicts",
     "build:types:gjs": "yarn run clear:types:gjs && NODE_OPTIONS=\"\" ts-for-gir generate '*' -e gjs --useNamespace --moduleType esm --ignoreConflicts",
     "build:types:try": "NODE_OPTIONS=\"\" ts-for-gir generate 'Zeitgeist-2.0' -e gjs --useNamespace --moduleType esm --ignoreConflicts",
     "build:types": "yarn run build:types:gjs && yarn run build:types:node-gtk",
-    "build:docs:node-gtk": "yarn run clear:docs:node-gtk && yarn run typedoc --options ./packages/typedoc-custom-cli/typedoc.node.js --in ./@types/node-gtk",
-    "build:docs:gjs": "yarn run clear:docs:gjs && yarn run typedoc --options ./packages/typedoc-custom-cli/typedoc.gjs.js --in ./@types/Gjs",
-    "build:docs:try": "yarn run clear:docs:try && yarn run typedoc --options ./packages/typedoc-custom-cli/typedoc.try.js",
+    "build:docs:node-gtk": "yarn run clear:docs:node-gtk && yarn workspace @gjsify/typedoc-build-docs run build:node-gtk",
+    "build:docs:gjs": "yarn run clear:docs:gjs && yarn workspace @gjsify/typedoc-build-docs run build:gjs",
+    "build:docs:try": "yarn run clear:docs:try && yarn workspace @gjsify/typedoc-build-docs run build:try",
+    "build:docs:node-gtk:local": "yarn run clear:docs:node-gtk && yarn workspace @gjsify/typedoc-build-docs run build:node-gtk:local",
+    "build:docs:gjs:local": "yarn run clear:docs:gjs && yarn workspace @gjsify/typedoc-build-docs run build:gjs:local",
+    "build:docs:try:local": "yarn run clear:docs:try && yarn workspace @gjsify/typedoc-build-docs run build:try:local",
     "build:docs": "yarn run build:docs:gjs && yarn run build:docs:node-gtk",
+    "build:docs:local": "yarn run build:docs:gjs:local && yarn run build:docs:node-gtk:local",
     "build:node-gtk": "yarn run build:types:node-gtk && yarn run build:docs:node-gtk",
     "build:gjs": "yarn run build:types:gjs && yarn run build:docs:gjs",
     "build:try": "yarn run build:types:try && yarn run build:docs:try",
+    "build:gjs:local": "yarn run build:types:gjs && yarn run build:docs:gjs:local",
+    "build:try:local": "yarn run build:types:try && yarn run build:docs:try:local",
     "build:packages:ts-for-gir": "cd vendor/ts-for-gjs && NODE_OPTIONS=\"\" npm install && NODE_OPTIONS=\"\" npm run build && NODE_OPTIONS=\"\" npm link",
-    "build:packages": "yarn run build:packages:ts-for-gir && yarn workspace @gjsify/typedoc-custom-cli run build && yarn workspace @gjsify/typedoc-plugin-remote-search run build && yarn workspace @gjsify/typedoc-theme run build && yarn workspace @gjsify/typedoc-theme-client run build",
+    "build:packages": "yarn run build:packages:ts-for-gir && yarn workspace @gjsify/typedoc-plugin-remote-search run build && yarn workspace @gjsify/typedoc-theme run build && yarn workspace @gjsify/typedoc-theme-client run build",
     "build": "yarn run build:packages",
     "validate:gjs": "tsc --noEmit ./@types/Gjs/*.ts",
     "validate:node-gtk": "tsc --noEmit ./@types/node-gtk/*.ts",
@@ -40,7 +49,7 @@
     "serve:gjs": "typedoc-server serve ./docs/gjs --origin '*'",
     "serve:try": "typedoc-server serve ./docs/try --origin '*'",
     "typedoc-server": "yarn workspace @gjsify/typedoc-plugin-remote-search run start",
-    "typedoc": "yarn workspace @gjsify/typedoc-custom-cli run start"
+    "typedoc": "yarn workspace @gjsify/typedoc-build-docs run typedoc"
   },
   "keywords": [
     "gjs",
@@ -59,11 +68,11 @@
   "license": "AGPL",
   "devDependencies": {
     "@ribajs/eslint-config": "workspace:^",
-    "@typescript-eslint/eslint-plugin": "^5.12.1",
-    "@typescript-eslint/experimental-utils": "^5.12.1",
-    "@typescript-eslint/parser": "^5.12.1",
-    "eslint": "^8.9.0",
-    "eslint-config-prettier": "^8.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/experimental-utils": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "2.5.1",
     "typescript": "^4.5.5"
@@ -114,7 +123,7 @@
   },
   "packageManager": "yarn@3.2.0",
   "dependencies": {
-    "@gjsify/typedoc-custom-cli": "workspace:^",
+    "@gjsify/typedoc-build-docs": "workspace:^",
     "@gjsify/typedoc-plugin-remote-search": "workspace:^",
     "@yarnpkg/esbuild-plugin-pnp": "^2.0.1"
   }
