Reuse custom typedoc cli for node-gtk and split try to try-gjs and try-node-gtk

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -6,7 +6,68 @@ packageExtensions:
   "@types/yargs@*":
     dependencies:
       "yargs-parser": "*"
-
+  "@types/koa@*":
+    dependencies:
+      "accepts": "*"
+      "cookies": "*"
+      "events": "*"
+      "http-assert": "*"
+      "keygrip": "*"
+      "koa-compose": "*"
+      "content-disposition": "*"
+      "http-errors": "*"
+  "@types/cookies@*":
+    dependencies:
+      "keygrip": "*"
+      "express": "*"
+      "connect": "*"
+  "@types/express@*":
+    dependencies:
+      "serve-static": "*"
+      "body-parser": "*"
+      "qs": "*"
+  "@types/express-serve-static-core@*":
+    dependencies:
+      "range-parser": "*"
+      "qs": "*"
+      "events": "*"
+  "@types/serve-static@*":
+    dependencies:
+      "mime": "*"
+  "@types/body-parser@*":
+    dependencies:
+      "connect": "*"
+  "@types/koa-compose@*":
+    dependencies:
+      "koa": "*"
+  "@types/koa-static@*":
+    dependencies:
+      "koa": "*"
+      "koa-send": "*"
+  "@types/koa-send@*":
+    dependencies:
+      "koa": "*"
+  "@types/koa-compress@*":
+    dependencies:
+      "koa": "*"
+  "@types/koa__router@*":
+    dependencies:
+      "koa": "*"
+  "@types/koa__cors@*":
+    dependencies:
+      "koa": "*"
+  "debug@*":
+    dependencies:
+      "supports-color": "*"
+  "@types/bootstrap@*":
+    dependencies:
+      "jquery": "*"
+  "@types/imagesloaded@*":
+    dependencies:
+      "jquery": "*"
+  "@types/debug@*":
+    dependencies:
+      "ms": "*"
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
     spec: "@yarnpkg/plugin-typescript"
