--- a/package.json
+++ b/package.json
@@ -6,48 +6,62 @@
   "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "yarn run start:gjs && yarn run start:node-gtk",
+    "start": "concurrently 'yarn:start:gjs' 'yarn:start:node-gtk'",
     "start:gjs": "yarn run build:gjs && yarn run serve:gjs",
     "start:node-gtk": "yarn run build:node-gtk && yarn run serve:node-gtk",
-    "start:try": "yarn run build:try && yarn run serve:try",
+    "start:try:gjs": "yarn run build:try:gjs && yarn run serve:try:gjs",
     "start:gjs:local": "yarn run build:gjs:local && yarn run serve:gjs",
     "start:node-gtk:local": "yarn run build:node-gtk:local && yarn run serve:node-gtk",
-    "start:try:local": "yarn run build:try:local && yarn run serve:try",
+    "start:try:gjs:local": "yarn run build:try:gjs:local && yarn run serve:try:gjs",
     "update": "yarn run update:submodules",
     "update:submodules": "git submodule update --init --recursive && git submodule foreach git pull origin master",
     "build:types:node-gtk": "yarn run clear:types:node-gtk && NODE_OPTIONS=\"\" ts-for-gir generate '*' -e node --useNamespace --moduleType commonjs --ignoreConflicts",
-    "build:types:gjs": "yarn run clear:types:gjs && NODE_OPTIONS=\"\" ts-for-gir generate '*' -e gjs --useNamespace --moduleType esm --ignoreConflicts",
-    "build:types:try": "NODE_OPTIONS=\"\" ts-for-gir generate 'Zeitgeist-2.0' -e gjs --useNamespace --moduleType esm --ignoreConflicts",
+    "build:types:try:node-gtk": "NODE_OPTIONS=\"\" ts-for-gir generate 'Zeitgeist-2.0' -e gjs --useNamespace --moduleType esm --ignoreConflicts",
+    "build:types:gjs": "yarn run clear:types:gjs && NODE_OPTIONS=\"\" ts-for-gir generate '*' -e node --useNamespace --moduleType commonjs --ignoreConflicts",
+    "build:types:try:gjs": "NODE_OPTIONS=\"\" ts-for-gir generate 'Zeitgeist-2.0' -e gjs --useNamespace --moduleType esm --ignoreConflicts",
     "build:types": "yarn run build:types:gjs && yarn run build:types:node-gtk",
     "build:docs:node-gtk": "yarn run clear:docs:node-gtk && yarn workspace @gjsify/typedoc-build-docs run build:node-gtk",
-    "build:docs:gjs": "yarn run clear:docs:gjs && yarn workspace @gjsify/typedoc-build-docs run build:gjs",
-    "build:docs:try": "yarn run clear:docs:try && yarn workspace @gjsify/typedoc-build-docs run build:try",
+    "build:docs:try:node-gtk": "yarn run clear:docs:try:node-gtk && yarn workspace @gjsify/typedoc-build-docs run build:try:node-gtk",
     "build:docs:node-gtk:local": "yarn run clear:docs:node-gtk && yarn workspace @gjsify/typedoc-build-docs run build:node-gtk:local",
+    "build:docs:try:node-gtk:local": "yarn run clear:docs:try:node-gtk && yarn workspace @gjsify/typedoc-build-docs run build:try:node-gtk:local",
+    "build:docs:gjs": "yarn run clear:docs:gjs && yarn workspace @gjsify/typedoc-build-docs run build:gjs",
+    "build:docs:try:gjs": "yarn run clear:docs:try:gjs && yarn workspace @gjsify/typedoc-build-docs run build:try:gjs",
     "build:docs:gjs:local": "yarn run clear:docs:gjs && yarn workspace @gjsify/typedoc-build-docs run build:gjs:local",
-    "build:docs:try:local": "yarn run clear:docs:try && yarn workspace @gjsify/typedoc-build-docs run build:try:local",
+    "build:docs:try:gjs:local": "yarn run clear:docs:try:gjs && yarn workspace @gjsify/typedoc-build-docs run build:try:gjs:local",
     "build:docs": "yarn run build:docs:gjs && yarn run build:docs:node-gtk",
     "build:docs:local": "yarn run build:docs:gjs:local && yarn run build:docs:node-gtk:local",
     "build:node-gtk": "yarn run build:types:node-gtk && yarn run build:docs:node-gtk",
+    "build:try:node-gtk": "yarn run build:types:try:node-gtk && yarn run build:docs:try:node-gtk",
+    "build:try:node-gtk:local": "yarn run build:types:try:node-gtk && yarn run build:docs:try:node-gtk:local",
     "build:gjs": "yarn run build:types:gjs && yarn run build:docs:gjs",
-    "build:try": "yarn run build:types:try && yarn run build:docs:try",
+    "build:try:gjs": "yarn run build:types:try:gjs && yarn run build:docs:try:gjs",
     "build:gjs:local": "yarn run build:types:gjs && yarn run build:docs:gjs:local",
-    "build:try:local": "yarn run build:types:try && yarn run build:docs:try:local",
+    "build:try:gjs:local": "yarn run build:types:try:gjs && yarn run build:docs:try:gjs:local",
     "build:packages:ts-for-gir": "cd vendor/ts-for-gjs && NODE_OPTIONS=\"\" npm install && NODE_OPTIONS=\"\" npm run build && NODE_OPTIONS=\"\" npm link",
-    "build:packages": "yarn run build:packages:ts-for-gir && yarn workspace @gjsify/typedoc-plugin-remote-search run build && yarn workspace @gjsify/typedoc-theme run build && yarn workspace @gjsify/typedoc-theme-client run build",
+    "build:packages:typedoc-plugin-remote-search": "yarn workspace @gjsify/typedoc-plugin-remote-search run build",
+    "build:packages:typedoc-theme": "yarn workspace @gjsify/typedoc-theme run build",
+    "build:packages:typedoc-theme-client": "yarn workspace @gjsify/typedoc-theme-client run build",
+    "build:packages": "concurrently 'yarn:build:packages:*'",
+    "watch:packages:ts-for-gir": "cd vendor/ts-for-gjs && NODE_OPTIONS=\"\" npm install && NODE_OPTIONS=\"\" npm run watch && NODE_OPTIONS=\"\" npm link",
+    "watch:packages:typedoc-plugin-remote-search": "yarn workspace @gjsify/typedoc-plugin-remote-search run watch",
+    "watch:packages:typedoc-theme": "yarn workspace @gjsify/typedoc-theme run watch",
+    "watch:packages:typedoc-theme-client": "yarn workspace @gjsify/typedoc-theme-client run watch",
+    "watch:packages": "concurrently 'yarn:watch:packages:*'",
     "build": "yarn run build:packages",
     "validate:gjs": "tsc --noEmit ./@types/Gjs/*.ts",
     "validate:node-gtk": "tsc --noEmit ./@types/node-gtk/*.ts",
     "validate": "yarn run validate:gjs && yarn run validate:node-gtk",
     "clear:docs:node-gtk": "rm -rf ./docs/node-gtk",
+    "clear:docs:try:node-gtk": "rm -rf ./docs/try-node-gtk",
     "clear:docs:gjs": "rm -rf ./docs/gjs",
-    "clear:docs:try": "rm -rf ./docs/try",
-    "clear:docs": "rm -rf ./docs/node-gtk ./docs/gjs ./docs/try",
+    "clear:docs:try:gjs": "rm -rf ./docs/try-gjs",
+    "clear:docs": "rm -rf ./docs/node-gtk ./docs/gjs ./docs/try-gjs",
     "clear:types:node-gtk": "rm -rf ./@types/node-gtk",
     "clear:types:gjs": "rm -rf ./@types/Gjs",
     "clear": "yarn run clear:docs",
     "serve:node-gtk": "typedoc-server serve ./docs/node-gtk --origin '*'",
     "serve:gjs": "typedoc-server serve ./docs/gjs --origin '*'",
-    "serve:try": "typedoc-server serve ./docs/try --origin '*'",
+    "serve:try:gjs": "typedoc-server serve ./docs/try-gjs --origin '*'",
     "typedoc-server": "yarn workspace @gjsify/typedoc-plugin-remote-search run start",
     "typedoc": "yarn workspace @gjsify/typedoc-build-docs run typedoc"
   },
@@ -71,6 +85,7 @@
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/experimental-utils": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
+    "concurrently": "^7.0.0",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
