--- a/packages/typedoc-build-docs/tsconfig.node-gtk.json
+++ b/packages/typedoc-build-docs/tsconfig.node-gtk.json
@@ -18,5 +18,5 @@
 		"newLine": "LF"
     },
 	"include": ["../../@types/node-gtk"],
-	"exclude": ["../../@types/Gjs", "../../@types/node-gtk/index.d.ts"]
+	"exclude": ["../../@types/node-gtk/index.d.ts"]
 }
