--- a/packages/typedoc-theme-client/package.json
+++ b/packages/typedoc-theme-client/package.json
@@ -5,14 +5,14 @@
   "main": "scripts/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --progress --color --env production",
+    "build": "concurrently 'yarn:build:prod' 'yarn:build:try'",
+    "build:prod": "webpack --progress --color --env production",
     "build:dev": "webpack --progress --color --env development",
-    "build:try": "yarn run build:dev --config ./webpack.try.js --env production",
-    "build:typedoc": "yarn run build:dev --config ./webpack.typedoc.js --env production",
-    "watch": "webpack --color --watch --env development",
+    "build:try": "yarn run build:dev --config ./webpack.try-gjs.js --env production",
+    "watch": "concurrently 'yarn:watch:try'",
+    "watch:dev": "webpack --color --watch --env development",
     "watch:prod": "webpack --color --watch --env production",
-    "watch:try": "yarn run watch --config ./webpack.try.js",
-    "watch:typedoc": "yarn run watch --config ./webpack.typedoc.js",
+    "watch:try": "yarn run watch --config ./webpack.try-gjs.js",
     "lint": "eslint . --ext .ts,.tsx --fix && npm run lint:csr",
     "lint:csr": "tsc -p tsconfig.json --noEmit"
   },
@@ -51,6 +51,7 @@
     "@typescript-eslint/typescript-estree": "^5.15.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-array-includes": "^2.0.3",
+    "concurrently": "^7.0.0",
     "css-loader": "^6.7.1",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
