--- a/packages/typedoc-build-docs/tsconfig.gjs.json
+++ b/packages/typedoc-build-docs/tsconfig.gjs.json
@@ -18,5 +18,5 @@
 		"newLine": "LF"
  	},
 	 "include": ["../../@types/Gjs"],
-	 "exclude": ["../../@types/node-gtk", "../../@types/Gjs/index.d.ts"]
+	 "exclude": ["../../@types/Gjs/index.d.ts"]
 }
