Split navigation to primary and secondary

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently 'yarn:start:gjs' 'yarn:start:node-gtk'",
+    "reinstall": "YARN_CHECKSUM_BEHAVIOR=update yarn install",
+    "start": "concurrently --kill-others 'yarn:start:gjs' 'yarn:start:node-gtk'",
     "start:gjs": "yarn run build:gjs && yarn run serve:gjs",
     "start:node-gtk": "yarn run build:node-gtk && yarn run serve:node-gtk",
     "start:try:gjs": "yarn run build:try:gjs && yarn run serve:try:gjs",
@@ -41,12 +42,12 @@
     "build:packages:typedoc-plugin-remote-search": "yarn workspace @gjsify/typedoc-plugin-remote-search run build",
     "build:packages:typedoc-theme": "yarn workspace @gjsify/typedoc-theme run build",
     "build:packages:typedoc-theme-client": "yarn workspace @gjsify/typedoc-theme-client run build",
-    "build:packages": "concurrently 'yarn:build:packages:*'",
+    "build:packages": "concurrently --kill-others-on-fail 'yarn:build:packages:*'",
     "watch:packages:ts-for-gir": "cd vendor/ts-for-gjs && NODE_OPTIONS=\"\" npm install && NODE_OPTIONS=\"\" npm run watch && NODE_OPTIONS=\"\" npm link",
     "watch:packages:typedoc-plugin-remote-search": "yarn workspace @gjsify/typedoc-plugin-remote-search run watch",
     "watch:packages:typedoc-theme": "yarn workspace @gjsify/typedoc-theme run watch",
     "watch:packages:typedoc-theme-client": "yarn workspace @gjsify/typedoc-theme-client run watch",
-    "watch:packages": "concurrently 'yarn:watch:packages:*'",
+    "watch:packages": "concurrently --kill-others 'yarn:watch:packages:*'",
     "build": "yarn run build:packages",
     "validate:gjs": "tsc --noEmit ./@types/Gjs/*.ts",
     "validate:node-gtk": "tsc --noEmit ./@types/node-gtk/*.ts",
@@ -88,8 +89,10 @@
     "concurrently": "^7.0.0",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "2.5.1",
+    "prettier": "^2.6.0",
     "typescript": "^4.6.2"
   },
   "workspaces": [
