--- a/packages/typedoc-theme-client/package.json
+++ b/packages/typedoc-theme-client/package.json
@@ -3,16 +3,21 @@
   "version": "0.0.1",
   "description": "",
   "main": "scripts/index.ts",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "concurrently 'yarn:build:prod' 'yarn:build:try'",
-    "build:prod": "webpack --progress --color --env production",
-    "build:dev": "webpack --progress --color --env development",
-    "build:try": "yarn run build:dev --config ./webpack.try-gjs.js --env production",
-    "watch": "concurrently 'yarn:watch:try'",
-    "watch:dev": "webpack --color --watch --env development",
-    "watch:prod": "webpack --color --watch --env production",
-    "watch:try": "yarn run watch --config ./webpack.try-gjs.js",
+    "build": "concurrently --kill-others-on-fail 'yarn:build:prod' 'yarn:build:try:*'",
+    "build:prod": "webpack --env production --config ./webpack.config.cjs",
+    "build:dev": "webpack --env development --stats-error-details --config ./webpack.config.cjs",
+    "build:try": "concurrently --kill-others-on-fail 'yarn:build:try:*'",
+    "build:try:gjs": "webpack --env development --stats-error-details --config ./webpack.try-gjs.cjs",
+    "build:try:node-gtk": "webpack --env development --stats-error-details --config ./webpack.try-node-gtk.cjs",
+    "watch": "concurrently --kill-others-on-fail 'yarn:watch:dev' 'yarn:watch:try:*'",
+    "watch:dev": "yarn run build:dev --watch",
+    "watch:prod": "yarn run build:prod --watch",
+    "watch:try": "concurrently --kill-others 'yarn:watch:try:*'",
+    "watch:try:gjs": "yarn run build:try:gjs --watch",
+    "watch:try:node-gtk": "yarn run build:try:node-gtk --watch",
     "lint": "eslint . --ext .ts,.tsx --fix && npm run lint:csr",
     "lint:csr": "tsc -p tsconfig.json --noEmit"
   },
@@ -59,9 +64,9 @@
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^7.2.1",
     "html-loader": "^3.1.0",
-    "postcss": "^8.4.8",
+    "postcss": "^8.4.12",
     "postcss-preset-env": "^7.4.2",
-    "prettier": "2.5.1",
+    "prettier": "^2.6.0",
     "pug": "^3.0.2",
     "pug-loader": "^2.4.0",
     "sass": "^1.49.9",
