--- a/packages/typedoc-theme/package.json
+++ b/packages/typedoc-theme/package.json
@@ -26,6 +26,7 @@
         "@ribajs/bs5": "workspace:^",
         "@ribajs/jsx": "workspace:^",
         "@ribajs/router": "workspace:^",
+        "@ribajs/typedoc": "workspace:^",
         "@types/node": "^17.0.21"
     }
 }
