typedoc-theme: Store navigation-primare data in assets json file

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "update": "yarn run update:submodules",
     "update:submodules": "git submodule update --init --recursive && git submodule foreach git pull origin master",
     "build:types:node-gtk": "yarn run clear:types:node-gtk && NODE_OPTIONS=\"\" ts-for-gir generate '*' -e node --useNamespace --moduleType commonjs --ignoreConflicts",
-    "build:types:try:node-gtk": "NODE_OPTIONS=\"\" ts-for-gir generate GLib-2.0 GObject-2.0 -e gjs --useNamespace --moduleType esm --ignoreConflicts",
-    "build:types:gjs": "yarn run clear:types:gjs && NODE_OPTIONS=\"\" ts-for-gir generate '*' -e node --useNamespace --moduleType commonjs --ignoreConflicts",
+    "build:types:try:node-gtk": "NODE_OPTIONS=\"\" ts-for-gir generate GLib-2.0 GObject-2.0 -e node --useNamespace --moduleType commonjs --ignoreConflicts",
+    "build:types:gjs": "yarn run clear:types:gjs && NODE_OPTIONS=\"\" ts-for-gir generate '*' -e gjs --useNamespace --moduleType esm --ignoreConflicts",
     "build:types:try:gjs": "NODE_OPTIONS=\"\" ts-for-gir generate GLib-2.0 GObject-2.0 -e gjs --useNamespace --moduleType esm --ignoreConflicts",
     "build:types": "yarn run build:types:gjs && yarn run build:types:node-gtk",
     "build:docs:node-gtk": "yarn run clear:docs:node-gtk && yarn workspace @gjsify/typedoc-build-docs run build:node-gtk",
