typedoc-theme: Dropdown mode for tsd-navigation-primary

--- a/packages/typedoc-plugin-remote-search/package.json
+++ b/packages/typedoc-plugin-remote-search/package.json
@@ -22,7 +22,7 @@
         "lunr"
     ],
     "files": [
-        "dist/**/*",
+        "dist/*",
         "assets/*"
     ],
     "devDependencies": {
