--- a/packages/typedoc-theme-client/package.json
+++ b/packages/typedoc-theme-client/package.json
@@ -82,6 +82,7 @@
     "@ribajs/core": "workspace:*",
     "@ribajs/events": "workspace:*",
     "@ribajs/extras": "workspace:*",
+    "@ribajs/fuse": "workspace:^",
     "@ribajs/iconset": "workspace:*",
     "@ribajs/router": "workspace:*",
     "@ribajs/typedoc": "workspace:^",
