--- a/packages/typedoc-build-docs/package.json
+++ b/packages/typedoc-build-docs/package.json
@@ -10,18 +10,18 @@
   },
   "scripts": {
     "build": "yarn run build:custom-cli",
-    "start:typedoc-cli": "NODE_OPTIONS=\"--require ../../.pnp.cjs --experimental-loader ../../.pnp.loader.mjs --max-old-space-size=32768\" typedoc --plugin @gjsify/typedoc-theme --plugin @gjsify/typedoc-plugin-remote-search",
-    "start:ts:custom-cli": "node --max_old_space_size=32768 -r ts-node/register src/cli.ts",
-    "start:custom-cli": "node --max_old_space_size=32768 dist/cli.js",
+    "start:typedoc-cli": "NODE_OPTIONS=\"--require ../../.pnp.cjs --experimental-loader ../../.pnp.loader.mjs --max-old-space-size=25600\" typedoc --plugin @gjsify/typedoc-theme --plugin @gjsify/typedoc-plugin-remote-search",
+    "start:ts:custom-cli": "node --expose-gc --max-old-space-size=25600 -r ts-node/register src/cli.ts",
+    "start:custom-cli": "node --expose-gc --max-old-space-size=25600 dist/cli.js",
     "build:custom-cli": "tsc --project ./tsconfig.json && chmod +x ./dist/cli.js",
     "watch:custom-cli": "tsc --project ./tsconfig.json --watch",
-    "build:gjs": "yarn run start:typedoc-cli --options ./typedoc.gjs.json",
+    "build:gjs": "yarn run start:custom-cli --options ./typedoc.gjs.json",
     "build:node-gtk": "yarn run start:custom-cli --options ./typedoc.node-gtk.json",
     "build:try:gjs": "yarn run start:typedoc-cli --options ./typedoc.try-gjs.json --serverBaseUrl https://try-gjs-docs.gjsify.org/",
     "build:try:node-gtk": "yarn run start:custom-cli --options ./typedoc.try-node-gtk.json --serverBaseUrl https://try-node-gtk-docs.gjsify.org/",
-    "build:gjs:local": "yarn run start:typedoc-cli --options ./typedoc.gjs.json",
-    "build:node-gtk:local": "yarn run start:custom-cli --options ./typedoc.node-gtk.json",
-    "build:try:gjs:local": "yarn run start:typedoc-cli --options ./typedoc.try-gjs.json",
+    "build:gjs:local": "yarn run start:custom-cli --options ./typedoc.gjs.json",
+    "build:node-gtk:local": "yarn run start:custom-cli --options ./typedoc.node-gtk.json --serverBaseUrl http://localhost:3024/",
+    "build:try:gjs:local": "yarn run start:typedoc-cli --options ./typedoc.try-gjs.json --serverBaseUrl http://localhost:3024/",
     "build:try:node-gtk:local": "yarn run start:custom-cli --options ./typedoc.try-node-gtk.json"
   },
   "keywords": [
