Change ts-for-gir submodule url

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,7 +7,7 @@
 	url = https://github.com/ribajs/riba.git
 [submodule "vendor/ts-for-gjs"]
 	path = vendor/ts-for-gjs
-	url = https://github.com/gjsify/ts-for-gjs.git
+	url = https://github.com/sammydre/ts-for-gir.git
 [submodule "docs"]
 	path = docs
 	url = https://github.com/gjsify/generated-docs.git
