Readd submodul ts-for-gjs

--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "@types"]
 	path = @types
 	url = https://github.com/gjsify/types.git
+[submodule "vendor/ts-for-gjs"]
+	path = vendor/ts-for-gjs
+	url = https://github.com/sammydre/ts-for-gir.git
